--- a/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
@@ -7,7 +7,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="12dp"
+    android:paddingTop="8dp"
     >
     <TextView
         android:id="@+id/source_search_row__loading_error_item__message"
@@ -16,11 +16,13 @@
         android:paddingStart="@dimen/setting_channels_row_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:textSize="17sp"
+        android:layout_marginBottom="6dp"
+        android:textSize="16sp"
         android:textColor="@color/text_primary"
         android:lineSpacingExtra="4dp"
         android:lineSpacingMultiplier="1.1"
+        android:drawablePadding="10dp"
+        android:drawableStart="@drawable/ic_report_problem"
         />
 
     <TextView
@@ -30,11 +32,14 @@
         android:layout_below="@id/source_search_row__loading_error_item__message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:textSize="15sp"
-        android:textColor="@color/text_secondary"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="28dp"
+        android:textSize="14sp"
+        android:textColor="@color/text_tertiary"
+        android:fontFamily="sans-serif-condensed"
         android:lineSpacingExtra="4dp"
         android:lineSpacingMultiplier="1.2"
+        android:gravity="center_vertical"
         />
 
     <View
