--- a/linen-starter/src/main/res/layout/source_search_row__source_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__source_item.xml
@@ -17,12 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textColor="@color/text_primary"
         android:lineSpacingExtra="4dp"
         android:lineSpacingMultiplier="1.1"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/ic_cast_connected"
+        android:drawableStart="@drawable/ic_feed"
         />
 
     <TextView
