--- a/linen-starter/src/main/res/layout/source_search_row__source_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__source_item.xml
@@ -21,25 +21,15 @@
         android:textColor="@color/text_primary"
         android:lineSpacingExtra="4dp"
         android:lineSpacingMultiplier="1.1"
-        android:drawablePadding="8dp"
+        android:drawablePadding="10dp"
         android:drawableStart="@drawable/ic_feed"
         />
 
     <TextView
         android:id="@+id/source_search_row__source_item__url"
-        android:paddingStart="@dimen/setting_channels_row_padding"
-        android:paddingEnd="@dimen/setting_channels_row_padding"
         android:layout_below="@id/source_search_row__source_item__title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="24dp"
-        android:textSize="14sp"
-        android:textColor="@color/text_tertiary"
-        android:fontFamily="sans-serif-condensed"
-        android:lineSpacingExtra="4dp"
-        android:lineSpacingMultiplier="1.2"
-        android:gravity="center_vertical"
+        android:layout_marginStart="26dp"
+        style="@style/SourceSearch.ItemUrl"
         />
 
     <View
