--- a/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
@@ -27,19 +27,9 @@
 
     <TextView
         android:id="@+id/source_search_row__loading_error_item__url"
-        android:paddingStart="@dimen/setting_channels_row_padding"
-        android:paddingEnd="@dimen/setting_channels_row_padding"
         android:layout_below="@id/source_search_row__loading_error_item__message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="28dp"
-        android:textSize="14sp"
-        android:textColor="@color/text_tertiary"
-        android:fontFamily="sans-serif-condensed"
-        android:lineSpacingExtra="4dp"
-        android:lineSpacingMultiplier="1.2"
-        android:gravity="center_vertical"
+        style="@style/SourceSearch.ItemUrl"
         />
 
     <View
