--- a/linen-starter/src/main/res/values/styles_source_search.xml
+++ b/linen-starter/src/main/res/values/styles_source_search.xml
@@ -54,6 +54,18 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
+    <style name="SourceSearch.ItemTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:lineSpacingExtra">4dp</item>
+        <item name="android:lineSpacingMultiplier">1.1</item>
+        <item name="android:drawablePadding">10dp</item>
+    </style>
+
     <style name="SourceSearch.ItemUrl">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
