--- a/linen-starter/src/main/res/values/styles_source_search.xml
+++ b/linen-starter/src/main/res/values/styles_source_search.xml
@@ -7,6 +7,7 @@
     <style name="SourceSearch.LabelRow">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">6dp</item>
 
         <item name="android:paddingTop">0dp</item>
         <item name="android:paddingEnd">0dp</item>
@@ -14,21 +15,22 @@
         <item name="android:paddingStart">0dp</item>
 
         <item name="android:gravity">center_vertical</item>
-
     </style>
 
     <style name="SourceSearch.LabelMessage">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
 
-        <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingEnd">4dp</item>
-        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">0dp</item>
         <item name="android:paddingStart">8dp</item>
 
-        <item name="android:drawablePadding">5dp</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:drawableEnd">@drawable/ic_more_horiz</item>
+
+        <item name="android:textSize">12sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
@@ -36,13 +38,12 @@
     <style name="SourceSearch.LabelDate">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentEnd">true</item>
-        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_alignParentStart">true</item>
 
-        <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingEnd">10dp</item>
-        <item name="android:paddingBottom">2dp</item>
-        <item name="android:paddingStart">4dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:paddingStart">12dp</item>
 
         <item name="android:textSize">13sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
@@ -51,6 +52,7 @@
     <style name="SourceSearch.ItemRow">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+
         <item name="cardUseCompatPadding">true</item>
     </style>
 
