--- a/linen-starter/src/main/res/layout/source_search_row__source_error.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__source_error.xml
@@ -34,9 +34,12 @@
         android:text="RETRY"
         android:layout_below="@id/border"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="24dp"
+        android:drawableEnd="@drawable/ic_refresh"
+        android:drawablePadding="4dp"
+        android:layout_marginEnd="8dp"
         style="@style/SourceSearch.ItemBottomText"
         />
+
 </RelativeLayout>
 
 </android.support.v7.widget.CardView>
