--- a/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
@@ -11,30 +11,30 @@
     >
     <TextView
         android:id="@+id/source_search_row__loading_error_item__message"
+        android:layout_marginBottom="10dp"
         android:paddingEnd="@dimen/setting_channels_row_padding"
         android:paddingStart="14dp"
         android:drawableStart="@drawable/ic_error_outline"
         style="@style/SourceSearch.ItemTitle"
         />
-    <TextView
-        android:id="@+id/source_search_row__loading_error_item__url"
-        android:layout_below="@id/source_search_row__loading_error_item__message"
-        android:layout_marginStart="28dp"
-        style="@style/SourceSearch.ItemUrl"
-        />
 
     <View
         android:id="@+id/border"
-        android:layout_below="@id/source_search_row__loading_error_item__url"
+        android:layout_below="@id/source_search_row__loading_error_item__message"
         style="@style/SourceSearch.ItemBorder"
         />
 
     <TextView
-        android:id="@+id/source_search_row__loading_error_item__open"
-        android:text="OPEN"
+        android:id="@+id/source_search_row__loading_error_item__url"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
         android:layout_below="@id/border"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="44dp"
+        android:textAlignment="textEnd"
+        android:drawableEnd="@drawable/ic_open_in_new_18dp"
+        android:drawablePadding="4dp"
+        android:textColor="@color/text_tertiary"
+        android:textSize="14sp"
         style="@style/SourceSearch.ItemBottomText"
         />
 
