--- a/linen-starter/src/main/res/values/styles_source_search.xml
+++ b/linen-starter/src/main/res/values/styles_source_search.xml
@@ -101,4 +101,18 @@
         <item name="android:textColor">@color/text_secondary</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="SourceSearch.ItemBottomText.OriginUrl">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_below">@id/border</item>
+
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:drawableEnd">@drawable/ic_open_in_new_18dp</item>
+
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:textColor">@color/text_tertiary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
