--- a/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__loading_error_item.xml
@@ -26,16 +26,7 @@
 
     <TextView
         android:id="@+id/source_search_row__loading_error_item__url"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_below="@id/border"
-        android:layout_marginStart="44dp"
-        android:textAlignment="textEnd"
-        android:drawableEnd="@drawable/ic_open_in_new_18dp"
-        android:drawablePadding="4dp"
-        android:textColor="@color/text_tertiary"
-        android:textSize="14sp"
-        style="@style/SourceSearch.ItemBottomText"
+        style="@style/SourceSearch.ItemBottomText.OriginUrl"
         />
 
 </RelativeLayout>
