--- a/linen-starter/src/main/res/layout/source_search_row__client_error.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__client_error.xml
@@ -17,16 +17,9 @@
         style="@style/SourceSearch.ItemTitle"
         />
 
-    <TextView
-        android:id="@+id/source_search_row__client_error__url"
-        android:layout_below="@id/source_search_row__client_error__message"
-        android:layout_marginStart="28dp"
-        style="@style/SourceSearch.ItemUrl"
-        />
-
     <View
         android:id="@+id/border"
-        android:layout_below="@id/source_search_row__client_error__url"
+        android:layout_below="@id/source_search_row__client_error__message"
         style="@style/SourceSearch.ItemBorder"
         />
 
@@ -38,7 +31,15 @@
         android:drawableEnd="@drawable/ic_refresh"
         android:drawablePadding="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="0dp"
         style="@style/SourceSearch.ItemBottomText"
+        />
+
+    <TextView
+        android:id="@+id/source_search_row__client_error__url"
+        android:layout_toStartOf="@id/source_search_row__client_error__retry"
+        android:layout_alignBaseline="@id/source_search_row__client_error__retry"
+        style="@style/SourceSearch.ItemBottomText.OriginUrl"
         />
 
 </RelativeLayout>
