--- a/linen-starter/src/main/res/values/styles_source_search.xml
+++ b/linen-starter/src/main/res/values/styles_source_search.xml
@@ -92,9 +92,13 @@
 
     <style name="SourceSearch.ItemBottomText">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">40dp</item>
-        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_height">wrap_content</item>
+
         <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_marginStart">10dp</item>
+
+        <item name="android:paddingBottom">9dp</item>
+        <item name="android:paddingTop">10dp</item>
 
         <item name="android:gravity">center_vertical</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
@@ -104,15 +108,21 @@
 
     <style name="SourceSearch.ItemBottomText.OriginUrl">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_below">@id/border</item>
 
         <item name="android:drawablePadding">4dp</item>
-        <item name="android:drawableEnd">@drawable/ic_open_in_new_18dp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_marginStart">40dp</item>
 
         <item name="android:textAlignment">textEnd</item>
         <item name="android:textColor">@color/text_tertiary</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="SourceSearch.ItemBottomText.OriginUrl.ToOpen">
+        <item name="android:drawableEnd">@drawable/ic_open_in_new_18dp</item>
     </style>
 
 </resources>
