add fab to source-search

--- a/linen-starter/src/main/res/layout/source_search_layout.xml
+++ b/linen-starter/src/main/res/layout/source_search_layout.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,9 +25,17 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/source_search_layout__reports"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/list_background"
         android:overScrollMode="never"
         />
 
 </LinearLayout>
+
+<android.support.design.widget.FloatingActionButton
+    android:id="@+id/source_search_layout__button_to_create"
+    style="@style/AppFloatingActionButton"
+    />
+
+</RelativeLayout>
