--- a/linen-starter/src/main/res/layout/source_search_row__footer.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__footer.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="@dimen/footer_height_for_floating_action_button"
     >
 
 </LinearLayout>
