--- a/linen-starter/src/main/res/layout/source_search_layout.xml
+++ b/linen-starter/src/main/res/layout/source_search_layout.xml
@@ -36,6 +36,7 @@
 <android.support.design.widget.FloatingActionButton
     android:id="@+id/source_search_layout__button_to_create"
     style="@style/AppFloatingActionButton"
+    android:src="@drawable/ic_search"
     />
 
 </RelativeLayout>
