--- a/linen-starter/src/main/res/layout/source_search_start.xml
+++ b/linen-starter/src/main/res/layout/source_search_start.xml
@@ -21,7 +21,7 @@
             android:theme="@style/AppTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Target Page URL"
+            android:hint="Page URL"
             android:inputType="text"
             android:textSize="16sp"
             />
