change dev_init_records to private

--- a/linen-starter/src/main/res/layout/dev_create_records_layout.xml
+++ b/linen-starter/src/main/res/layout/dev_create_records_layout.xml
@@ -59,7 +59,7 @@
 
     <View style="@style/DevCreateRecordsMenuSeparator" />
 
-    <include layout="@layout/dev_init_records" />
+    <include layout="@layout/_dev_init_records" />
 
     <View style="@style/DevCreateRecordsMenuSeparator" />
 
